test_suite/alan-2022-examples/passing/000130_deriv.alan
source P begin if 9523 or 0 then relax end end
