test_suite/alan-2022-examples/failing/007710_mutation.alan
source o begin while if 7 do relax end end
